--- a/views/card.html
+++ b/views/card.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kezdőlap</title>
-    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="card" style="width: 240;">
+        <img class="card-img-top" src="###" alt="###">
+        <div class="card-body">
+          <h5 class="card-title">###</h5>
+          <p class="card-text">###</p>
+          <a href="#" class="btn btn-primary">A gyártó honlapja</a>
+        </div>
+      </div>
 </body>
 </html>
