--- a/views/card.html
+++ b/views/card.html
@@ -9,11 +9,19 @@
 </head>
 <body>
     <div class="card" style="width: 240;">
-        <img class="card-img-top" src="###" alt="###">
+        <img class="card-img-top" src="/ferficipo.png" alt="ferficipo">
         <div class="card-body">
-          <h5 class="card-title">###</h5>
-          <p class="card-text">###</p>
-          <a href="#" class="btn btn-primary">A gyártó honlapja</a>
+          <h5 class="card-title">Man shoes</h5>
+          <p class="card-text">Nike</p>
+          <a href="https://www.nike.com/hu/?cp=10066868458_search_|nike%20com|10629411059|108602201241|e|c|HU|extended|452306834153&gclsrc=aw.ds&ds_rl=1252249&gclid=CjwKCAjw_L6LBhBbEiwA4c46uvh9S73v0A4Wx3VSPQP1Zl654VmE7FrmuzdBfB8PQX0zcQJVjaQuCBoCLzgQAvD_BwE" class="btn btn-primary">A gyártó honlapja</a>
+        </div>
+      </div>
+      <div class="card" style="width: 240;">
+        <img class="card-img-top" src="/noicipo.png" alt="ferficipo">
+        <div class="card-body">
+          <h5 class="card-title">Woman shoes</h5>
+          <p class="card-text">Puma</p>
+          <a href="https://eu.puma.com/hu/en/home?gclid=CjwKCAjw_L6LBhBbEiwA4c46unHv_8Pi724zJ0v-O1rWVWH8VVMahor6S3WimWW2DeXxP1ydl-JAQxoCyxkQAvD_BwE" class="btn btn-primary">A gyártó honlapja</a>
         </div>
       </div>
 </body>
