jol vannak a kepek igy most mar

--- a/views/card.html
+++ b/views/card.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="card" style="width: 240;">
-        <img class="card-img-top" src="/ferficipo.png" alt="ferficipo">
+        <img class="card-img-top" src="/ferficipo.png" alt="ferficipo" style="width:240px; height:100px">
         <div class="card-body">
           <h5 class="card-title">Man shoes</h5>
           <p class="card-text">Nike</p>
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="card" style="width: 240;">
-        <img class="card-img-top" src="/noicipo.png" alt="ferficipo">
+        <img class="card-img-top" src="/noicipo.png" alt="noicipo" style="width:240px; height:100px">
         <div class="card-body">
           <h5 class="card-title">Woman shoes</h5>
           <p class="card-text">Puma</p>
